[gd_scene load_steps=4 format=3 uid="uid://dystn5u444ihq"]

[ext_resource type="Texture2D" uid="uid://be73s7hey0vwb" path="res://media/sprites/char1/FirstChar_hitted_color.png" id="1_arvow"]
[ext_resource type="Script" uid="uid://c4nvks00nrim2" path="res://scripts/main_menu.gd" id="1_urejr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_urejr"]
bg_color = Color(0.414083, 0.863281, 0.553725, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_urejr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Option" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuButton" type="MenuButton" parent="CanvasLayer/Option"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -15.5
offset_right = 45.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.914063, 0.848367, 0.399853, 1)
theme_override_constants/outline_size = 6
theme_override_styles/hover = SubResource("StyleBoxFlat_urejr")
text = "Resolution"
item_count = 2
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "800x600"
popup/item_1/id = 1

[node name="ButtonStart" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -704.0
offset_top = 100.0
offset_right = -536.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="Button2" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -704.0
offset_top = 164.0
offset_right = -536.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2
text = "Option"

[node name="Button3" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -704.0
offset_top = 228.0
offset_right = -536.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[node name="FirstCharHittedColor" type="Sprite2D" parent="."]
position = Vector2(1608, 760)
texture = ExtResource("1_arvow")

[connection signal="about_to_popup" from="CanvasLayer/Option/MenuButton" to="." method="_on_menu_button_about_to_popup"]
[connection signal="button_down" from="CanvasLayer/ButtonStart" to="." method="_on_button_start_button_down"]
[connection signal="button_down" from="CanvasLayer/Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="CanvasLayer/Button3" to="." method="_on_button_3_button_down"]
